Yeni özellikler eklendi

--- a/templates/cari/cari_detay.html
+++ b/templates/cari/cari_detay.html
@@ -27,6 +27,9 @@
                     <a href="{% url 'cari:ekstre' cari.pk %}" class="btn btn-info btn-sm">
                         <i class="bi bi-file-text"></i> Ekstre
                     </a>
+                    <a href="{% url 'cari:ekstre_pdf' cari.pk %}" class="btn btn-secondary btn-sm" target="_blank">
+                        <i class="bi bi-file-pdf"></i> PDF İndir
+                    </a>
                 </div>
             </div>
         </div>
