--- a/templates/cari/cari_ekstre.html
+++ b/templates/cari/cari_ekstre.html
@@ -6,9 +6,14 @@
 <div class="card">
     <div class="card-header d-flex justify-content-between align-items-center">
         <h5>{{ cari.ad_soyad }} - Hesap Ekstresi</h5>
-        <a href="{% url 'cari:detay' cari.pk %}" class="btn btn-sm btn-secondary">
-            <i class="bi bi-arrow-left"></i> Geri
-        </a>
+        <div>
+            <a href="{% url 'cari:ekstre_pdf' cari.pk %}?tarih_baslangic={{ tarih_baslangic }}&tarih_bitis={{ tarih_bitis }}" class="btn btn-sm btn-info" target="_blank">
+                <i class="bi bi-file-pdf"></i> PDF İndir
+            </a>
+            <a href="{% url 'cari:detay' cari.pk %}" class="btn btn-sm btn-secondary">
+                <i class="bi bi-arrow-left"></i> Geri
+            </a>
+        </div>
     </div>
     <div class="card-body">
         <form method="get" class="mb-4">
